--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,14 @@ body {
             font-size: 16px;
             padding: 15px;
             max-width: 500px;
+            .grouping-container {
+              display: flex;
+              flex-direction: row-reverse;
+              justify-content: space-between;
+              button {
+                background-color: #e0d7f3;
+              }
+            }
             input {
               width: 100%;
               background-color: #e0d7f3;
