--- a/src/App.scss
+++ b/src/App.scss
@@ -11,11 +11,11 @@ body {
   min-height: 100vh;
   .table-container {
     background-color: #29344b;
-    padding: 40px;
+    padding: 30px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 30px;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
     -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
@@ -27,7 +27,6 @@ body {
         color: #e0d4f6;
         tr {
           th {
-            border: 0.2px dashed #e0d4f6;
             padding: 15px;
             .table-header {
               display: flex;
@@ -47,8 +46,8 @@ body {
         color: #302547;
         tr {
           td {
-            font-size: 16px;
-            padding: 15px;
+            font-size: 14px;
+            padding: 10px;
             max-width: 500px;
             .grouping-container {
               display: flex;
@@ -60,9 +59,10 @@ body {
             input {
               width: 100%;
               background-color: #e0d7f3;
-              font-size: 16px;
+              font-size: 14px;
               padding: 5px 0px;
               text-align: center;
+              border: 1px solid #e0d7f3;
             }
             input:focus {
               outline: none;
@@ -77,7 +77,7 @@ body {
       gap: 20px;
       button {
         font-size: 20px;
-        padding: 14px 30px;
+        padding: 10px 30px;
         border-radius: 6px;
         background-color: #52ab98;
         color: #fff;
